implement managed network proxies
